# algorithmica_way

./: .gitignore  README.md  pyproject.toml
prefix_sum/1/: test.py
prefix_sum_1/: algo.py
